# Rational-Numbers

./: CMakeLists.txt  README.md
Docs/: Rational Project.docx  rational.hpp
include/: CMakeLists.txt  rational.h
src/: CMakeLists.txt  rational.cpp  test_rational.cpp
